--- a/.github/workflows/publish-to-azure.yml
+++ b/.github/workflows/publish-to-azure.yml
@@ -18,10 +18,10 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
-    - uses: actions/setup-node@v1
-      with:
-        node-version: '12.x'
-        registry-url: 'https://registry.npmjs.org'
+    #- uses: actions/setup-node@v1
+    #  with:
+    #    node-version: '12.x'
+    #    registry-url: 'https://registry.npmjs.org'
     - name: Build and Deploy
       id: builddeploy
       uses: Azure/static-web-apps-deploy@v0.0.1-preview
